--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,16 @@
-
+name: test cases
+on: push 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with: 
+          node-version: '14.x'
+      - name: Install dependencies
+        run: npm install
+        run: npm run build
+        run: npx test
