--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ jobs:
         uses: actions/setup-node@v2
         with: 
           node-version: '14.x'
-      - name: Install dependencies
-        run: npm install
-        run: npm run build
-        run: npx test
+      - run: npm install
+      - run: npm run build
+      - run: npx test
