--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
           node-version: '14.x'
       - run: npm install
       - run: npm run build
-      - run: npx test
+      - run: npm test
