--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install Node.js
+      - uses: actions/checkout@v2
+      - name: Use Node.js
         uses: actions/setup-node@v2
-        with: 
+        with:
           node-version: '14.x'
       - run: npm install
       - run: npm run build
